# 2024-SEA-ME-Hackathon

./: .gitmodules
catkin/jetracer_bringup/src/: jetson_GPIO.py
catkin/jetracer_teleop/: CMakeLists.txt  package.xml
catkin/jetracer_teleop/launch/: teleop.launch
catkin/jetracer_teleop/src/: teleop_node.py
catkin/line_tracer/launch/: line_tracer.launch
catkin/my_teleop_pkg/: CMakeLists.txt
catkin/my_teleop_pkg/src/: teleop_node.py
catkin/rim_line/: package.xml
catkin/rim_line/cfg/: PID.cfg
catkin/rim_line/launch/: line_follower.launch
catkin/rim_track2/: CMakeLists.txt  setup.py
catkin/rim_track2/cfg/: control.cfg
catkin/rim_track2/scripts/: camera_params.json
catkin/rim_track2/src/: main.py
catkin/slam_mapping/: CMakeLists.txt
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/lib/openslam_gmapping/: autoptr_test  configfile_test  gfs2log  gfs2neff  gfs2rec  icptest  log_plot  log_test  rdk2carmen  scanmatch_test  scanstudio2carmen
catkin_ws/devel/lib/pkgconfig/: jetracer_bringup.pc  jetracer_teleop.pc  my_line_tracing_pkg.pc  my_teleop_pkg.pc  openslam_gmapping.pc  slam_mapping.pc
catkin_ws/devel/share/control/cmake/: controlConfig.cmake
catkin_ws/devel/share/demo/cmake/: demoConfig.cmake
catkin_ws/devel/share/jetracer_bringup/cmake/: jetracer_bringupConfig.cmake
catkin_ws/devel/share/jetracer_teleop/cmake/: jetracer_teleopConfig.cmake
catkin_ws/devel/share/my_line_tracing_pkg/cmake/: my_line_tracing_pkgConfig.cmake
catkin_ws/devel/share/my_teleop_pkg/cmake/: my_teleop_pkgConfig.cmake
catkin_ws/devel/share/opencv_test/cmake/: opencv_testConfig.cmake
catkin_ws/devel/share/openslam_gmapping/cmake/: openslam_gmappingConfig.cmake
catkin_ws/devel/share/slam_mapping/cmake/: slam_mappingConfig.cmake
catkin_ws/devel/share/todo/cmake/: todoConfig.cmake
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/jetracer_bringup/: requiresment.txt
catkin_ws/src/jetracer_bringup/launch/: bringup.launch
catkin_ws/src/jetracer_bringup/src/: nvidia_racecar.py
catkin_ws/src/my_line_tracing_pkg/: CMakeLists.txt
catkin_ws/src/my_line_tracing_pkg/launch/: line_tracing.launch
catkin_ws/src/my_line_tracing_pkg/src/: camera_utils.py  line_tracing_node.py
catkin_ws/src/my_teleop_pkg/: package.xml
catkin_ws/src/slam_mapping/: package.xml
fennec_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
fennec_ws/devel/.private/catkin_tools_prebuild/: .catkin
fennec_ws/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
fennec_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
fennec_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
jetracer_bringup/: CMakeLists.txt  package.xml
jetracer_bringup/src/: cmd_vel_servo.py  jetson_GPIO.py.save  racecar.py  test.py
lane/: lane_detection_system_using_opencv.py
lane_detection_servo/: CMakeLists.txt  package.xml
lane_detection_servo/src/: lane_detection_publisher.py
lane_ws/: lane_detection_system_using_opencv.py
lane_ws/devel/: .catkin  setup.sh
line_tracer/: CMakeLists.txt  package.xml
line_tracer/scripts/: line_tracer.py
my_teleop_pkg/src/: .teleop_node.py.swp
rim_line/: CMakeLists.txt
rim_line/scripts/: line_follower.py
rim_track2/: package.xml
rim_track2/launch/: rim_track2.launch
rim_track2/scripts/: arduino_interface.py  camera_calibration.py
rim_track2/src/: line_detection_node.py  obstacle_detection_node.py  signal_detection_node.py
rim_track2/urdf/: robot.urdf
rplidar_ros/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
rplidar_ros/devel/lib/pkgconfig/: rplidar_ros.pc
rplidar_ros/devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
rplidar_ros/devel/share/rplidar_ros/cmake/: rplidar_rosConfig.cmake
slam_mapping/: slam_mapping.launch
test_ws/.catkin_tools/profiles/default/: devel_collisions.txt
test_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
test_ws/devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
test_ws/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
test_ws/devel/.private/jetracer/: .catkin  setup.sh
test_ws/devel/.private/joy_racer/: .catkin  .rosinstall  local_setup.sh
test_ws/devel/include/jetracer/: jetRacerCar.h
test_ws/devel/lib/jetracer/: jetRacer_Car  jetRacer_Controller_Test
test_ws/devel/lib/joy_racer/: joy_racer
test_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  jetracer.pc  joy_racer.pc
test_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
test_ws/devel/share/jetracer/cmake/: jetracer-msg-extras.cmake  jetracer-msg-paths.cmake  jetracerConfig-version.cmake  jetracerConfig.cmake
test_ws/devel/share/joy_racer/cmake/: joy_racer-msg-extras.cmake  joy_racer-msg-paths.cmake  joy_racerConfig-version.cmake  joy_racerConfig.cmake
test_ws/devel/share/roseus/ros/jetracer/: manifest.l
test_ws/logs/joy_racer/: build.cmake.000.log.stderr
(+37 files in other folders)
